update chapter 1 and 2

--- a/Project report/__latexindent_temp.tex
+++ b/Project report/__latexindent_temp.tex
@@ -7,7 +7,6 @@
 \usepackage{hyphenat}
 \usepackage[numbers,square]{natbib}
 \usepackage{lipsum}
-\usepackage{enumitem}
 
 % \useEnglish
 \useThai
@@ -72,16 +71,7 @@
     }
 
     \makeabstracteng{
-        Computational Thinking becomes an essential and fundamental skill that can lead to an effective problem-solving process.
-        Accordingly, several teaching patterns of Computational Thinking and Critical Thinking skills were integrated into the current
-        teaching and learning for preschool to enhance children and young people to apply them to solve daily life problems and later,
-        especially in an age where technology is becoming increasingly important.
-
-        In this project, we found that using learning media such as robots, maps, and tangible items like blocks are an effective learning tools for children.
-        In contrast, the cost of learning media for Computational Thinking is quite high. Which low-income parents have difficulty providing these devices to their children.
-        Through this project, we develop a prototype of learning media for Computational Thinking using a Microcontroller in a form of Tangible Programming with low-cost devices.
-        This learning media will develop Computational Thinking skill and encourage young people to participate in activities by thinking,
-        analyzing and solving problems according to the specified game play.
+        Computational thinking becomes an essential and fundamental skill that can lead to an effective problem-solving process. Accordingly, several teaching patterns of computational thinking and critical thinking skills were integrated into the current teaching and learning for preschool to enhance children and young people to apply them to solve daily life problems and later, especially in an age where technology is becoming increasingly important.
     }
 
     \makeack
