--- a/Project report/chapter3.tex
+++ b/Project report/chapter3.tex
@@ -1,4 +1,12 @@
 \chapter{วิธีการดำเนินการวิจัย}
 \label{chapter:experiment}
 
-บทที่สาม
+\section{วิเคราะห์ความต้องการ}
+\subsection{ความต้องการส่วนหน้าที่หลักของระบบ (Functional Requirement)}
+
+\subsection{ความต้องการส่วนที่ไม่ใช่หน้าที่หลักของระบบ (Non-functional Requirement)}
+
+\section{การวิเคราะห์และออกแบบระบบ}
+\subsection{การออกแบบอุปกรณ์}
+
+\subsection{แผนภาพยูสเคส (Use Case Diagram)}
