--- a/Project report/reference.bib
+++ b/Project report/reference.bib
@@ -67,3 +67,17 @@
   year = {2560},
   url = {https://loboris.eu/ESP32/ESP32-CAM%20Product%20Specification.pdf}
 }
+
+@article{MicroPython,
+  author = {Damien George},
+  title = {MicroPython},
+  year = {2557},
+  url = {https://micropython.org}
+}
+
+@article{MicroPythonBasic,
+  author = {Tony DiCola},
+  title = {MicroPython Basics: What is MicroPython?},
+  year = {2559},
+  url = {https://learn.adafruit.com/micropython-basics-what-is-micropython}
+}
