--- a/Project report/reference.bib
+++ b/Project report/reference.bib
@@ -1,83 +1,97 @@
 @article{KnowComputationalThinking,
   author = {{Sorapol Chompaisal}},
-  title = {รู้จัก Computational Thinking กัน},
-  year = {2561},
-  url = {https://engineering.thinknet.co.th/รู้จัก-computational-thinking-กัน-fb69c701dbc7}
+  title  = {รู้จัก Computational Thinking กัน},
+  year   = {2561},
+  url    = {https://engineering.thinknet.co.th/รู้จัก-computational-thinking-กัน-fb69c701dbc7}
 }
 
 @article{IntroductionToComputationalThinking,
   author = {BBC},
-  title = {Introduction to computational thinking},
-  year = {2563},
-  url = {https://www.bbc.co.uk/bitesize/guides/zp92mp3/revision/1}
+  title  = {Introduction to computational thinking},
+  year   = {2563},
+  url    = {https://www.bbc.co.uk/bitesize/guides/zp92mp3/revision/1}
 }
 
 @article{ComputationalThinking,
   author = {{Jeannette M. Wing}},
-  title = {Computational Thinking},
-  year = {2549},
-  url = {https://www.cs.cmu.edu/~15110-s13/Wing06-ct.pdf}
+  title  = {Computational Thinking},
+  year   = {2549},
+  url    = {https://www.cs.cmu.edu/~15110-s13/Wing06-ct.pdf}
 }
 
 @article{ChildrenEyesHealthCare,
   author = {โรงพยาบาลบํารุงราษฎร์},
-  title = {สุขภาพตากับเด็กยุคดิจิตอล},
-  year = {2558},
-  url = {https://www.bumrungrad.com/th/health-blog/august-2015/children-eyes-health-care}
+  title  = {สุขภาพตากับเด็กยุคดิจิตอล},
+  year   = {2558},
+  url    = {https://www.bumrungrad.com/th/health-blog/august-2015/children-eyes-health-care}
 }
 
 @article{ComputerVisionSyndrome,
   author = {{พญ.วีรยา พิมลรัฐ}},
-  title = {Computer Vision Syndrome (CVS) ตาไม่สบายเมื่อติดจอคอม},
-  year = {2563},
-  url = {https://www.bangkokhospital.com/content/computer-vision-syndrome}
+  title  = {Computer Vision Syndrome (CVS) ตาไม่สบายเมื่อติดจอคอม},
+  year   = {2563},
+  url    = {https://www.bangkokhospital.com/content/computer-vision-syndrome}
 }
 
 @article{CSUnplugged,
   author = {{กันต์ เอี่ยมอินทรา}},
-  title = {Computer Science Unplugged เรียนคอมฯแบบไม่ใช้คอมฯ},
-  year = {2562},
-  url = {https://www.bangkokbiznews.com/blog/detail/647968}
+  title  = {Computer Science Unplugged เรียนคอมฯแบบไม่ใช้คอมฯ},
+  year   = {2562},
+  url    = {https://www.bangkokbiznews.com/blog/detail/647968}
 }
 
 @article{CSUnplugged2,
   author = {{ผศ.ชฎารัตน์ พิพัฒนนันท์}},
-  title = {CS Unplugged เรียน Coding โดยไม่ใช้คอมพิวเตอร์},
-  year = {2562},
-  url = {https://www.starfishlabz.com/blog/80-cs-unplugged-เรียน-coding-โดยไม่ใช้คอมพิวเตอร์}
+  title  = {CS Unplugged เรียน Coding โดยไม่ใช้คอมพิวเตอร์},
+  year   = {2562},
+  url    = {https://www.starfishlabz.com/blog/80-cs-unplugged-เรียน-coding-โดยไม่ใช้คอมพิวเตอร์}
 }
 
 @article{VarietyOfQRCode,
   author = {{กชกร พระพรตระการ, ณัฐวุฒิ บุญโรจน์วงค์}},
-  title = {A Variety of QR Code},
-  year = {2560},
-  url = {http://apheit.bu.ac.th/jounal/science-vol6-1/12_9_formatted%20V6-1.pdf}
+  title  = {A Variety of QR Code},
+  year   = {2560},
+  url    = {http://apheit.bu.ac.th/jounal/science-vol6-1/12_9_formatted%20V6-1.pdf}
 }
 
 @article{SQRC,
   author = {Denso},
-  title = {What is SQRC (Secret-function-equipped QR Code)?},
-  year = {2563},
-  url = {https://denso-adc.com/learning-center/what-is-sqrc}
+  title  = {What is SQRC (Secret-function-equipped QR Code)?},
+  year   = {2563},
+  url    = {https://denso-adc.com/learning-center/what-is-sqrc}
 }
 
 @article{ESP32CAM,
   author = {AI-Thinker},
-  title = {ESP32-CAM Module},
-  year = {2560},
-  url = {https://loboris.eu/ESP32/ESP32-CAM%20Product%20Specification.pdf}
+  title  = {ESP32-CAM Module},
+  year   = {2560},
+  url    = {https://loboris.eu/ESP32/ESP32-CAM%20Product%20Specification.pdf}
 }
 
 @article{MicroPython,
   author = {Damien George},
-  title = {MicroPython},
-  year = {2557},
-  url = {https://micropython.org}
+  title  = {MicroPython},
+  year   = {2557},
+  url    = {https://micropython.org}
 }
 
 @article{MicroPythonBasic,
   author = {Tony DiCola},
-  title = {MicroPython Basics: What is MicroPython?},
-  year = {2559},
-  url = {https://learn.adafruit.com/micropython-basics-what-is-micropython}
+  title  = {MicroPython Basics: What is MicroPython?},
+  year   = {2559},
+  url    = {https://learn.adafruit.com/micropython-basics-what-is-micropython}
+}
+
+@article{MotorControlDriverChip,
+  author = {DZSC},
+  title  = {Motor control driver chip},
+  year   = {2563},
+  url    = {https://www.elecrow.com/download/datasheet-l9110.pdf}
+}
+
+@article{Arduino,
+  author = {Arduino},
+  title  = {What is Arduino?},
+  year   = {2561},
+  url    = {https://www.arduino.cc/en/Guide/Introduction}
 }
